@@ -28,6 +28,8 @@
  * This helper class can create class instances with and without parameters,
  * working both in TYPO3 4.2 and 4.3 without deprecation warnings.
  *
+ * @deprecated 2014-04-11 use t3lib_div::makeInstance instead
+ *
  * @package TYPO3
  * @subpackage tx_oelib
  *
@@ -43,8 +45,12 @@ class tx_oelib_ObjectFactory {
 	 * @param string $className the name of the existing class to create
 	 *
 	 * @return object an instance of $className
+	 *
+	 * @deprecated 2014-04-11 use t3lib_div::makeInstance instead
 	 */
 	public static function make($className) {
+		t3lib_div::logDeprecatedFunction();
+
 		// Makes sure that the parent class is included so it can load any
 		// XCLASS subclasses.
 		tx_oelib_Autoloader::load($className);
